Login: add a recaptcha

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.0.28",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.37",
+    "vue-recaptcha": "^2.0.3",
     "vue-router": "^4.1.6",
     "yup": "^0.32.11"
   },
