--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@vueuse/components": "^9.10.0",
     "@vueuse/core": "^9.10.0",
+    "dayjs": "^1.11.7",
     "flowbite": "^1.5.5",
     "flowbite-vue": "^0.0.10",
     "pinia": "^2.0.28",
@@ -18,6 +20,7 @@
     "vue": "^3.2.37",
     "vue-recaptcha": "^2.0.3",
     "vue-router": "^4.1.6",
+    "vue-tailwind-datepicker": "^1.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
