--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^4.5.0",
     "@vueuse/components": "^9.10.0",
     "@vueuse/core": "^9.10.0",
     "flowbite": "^1.5.5",
